# strava-analytics

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  run_dashboard.command
src/ride_analytics/: __init__.py  cli.py  config.py  ingest.py
src/ride_analytics/clustering/: __init__.py  climb_clusters.py
src/ride_analytics/export/: __init__.py  csv_export.py
src/ride_analytics/metrics/: __init__.py  classification.py  climbs.py  comparison.py  decoupling.py  durability.py  intervals.py  pmc.py  power_curve.py  single_ride.py  zones.py
src/ride_analytics/report/: __init__.py  builder.py
src/ride_analytics/report/templates/: report.html.j2
src/ride_analytics/web/: __init__.py  app.py  charts.py  schemas.py  session.py
src/ride_analytics/web/static/: index.html
src/ride_analytics/web/static/css/: style.css
src/ride_analytics/web/static/js/: app.js
tests/: conftest.py  test_classification.py  test_climb_clusters.py  test_climbs.py  test_comparison.py  test_csv_export.py  test_decoupling.py  test_durability.py  test_ingest.py  test_intervals.py  test_pmc.py  test_power_curve.py  test_single_ride.py  test_web_api.py  test_zones.py
